# RRC2015_Baseline_CV3Tess

./: CMakeLists.txt  README.md  main.cpp
